You need to sign in or sign up before continuing.
auhal: save original stream format for digital aout fails which lead to nonfunctional module in subsequent pcm playback
Start SPDIF playback, plug out cable --> format is reset to pcm on stop.
Then, plug cable in. Actual format is not saved to pcm as it would be expected, but is read as AC3 already. Then, reverting this setting in stop fails. (This leads to crashes in current debug builds because of wrong error path.) More important, starting pcm audio afterwards leads to completely broken auhal module.
[0x1002b1e10] auhal audio output debug: attempting to use device 40
[0x1002b1e10] auhal audio output debug: found 12 stream formats for stream id 41
[0x1002b1e10] auhal audio output debug: supported format: [96000,000000][mcpl][4][8][1][8][2][24]
[0x1002b1e10] auhal audio output debug: supported format: [48000,000000][mcpl][4][8][1][8][2][24]
[0x1002b1e10] auhal audio output debug: supported format: [44100,000000][mcpl][4][8][1][8][2][24]
[0x1002b1e10] auhal audio output debug: supported format: [96000,000000][mcpl][4][8][1][8][2][20]
[0x1002b1e10] auhal audio output debug: supported format: [48000,000000][mcpl][4][8][1][8][2][20]
[0x1002b1e10] auhal audio output debug: supported format: [44100,000000][mcpl][4][8][1][8][2][20]
[0x1002b1e10] auhal audio output debug: supported format: [96000,000000][mcpl][12][4][1][4][2][16]
[0x1002b1e10] auhal audio output debug: supported format: [48000,000000][mcpl][12][4][1][4][2][16]
[0x1002b1e10] auhal audio output debug: supported format: [44100,000000][mcpl][12][4][1][4][2][16]
[0x1002b1e10] auhal audio output debug: supported format: [96000,000000][3cac][76][6144][1536][0][2][16]
[0x1002b1e10] auhal audio output debug: supported format: [48000,000000][3cac][76][6144][1536][0][2][16]
[0x1002b1e10] auhal audio output debug: supported format: [44100,000000][3cac][76][6144][1536][0][2][16]
[0x1002b1e10] auhal audio output debug: Using audio device for digital output
[0x1002b1e10] auhal audio output debug: original stream format: [48000,000000][3cac][76][6144][1536][0][2][16] <---
[0x1002b1e10] auhal audio output debug: setting stream format: [48000,000000][3cac][76][6144][1536][0][2][16]