auhal: fix crash on error paths for stream format change

ref #9957